--- a/DHSC.ANS.API.Consumer.Docs/output/accessibility.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/accessibility.html
@@ -8,8 +8,8 @@
 
     <title>Abortion Notification Service - HSA4 Submission API</title>
 
-    <!--<link href="assets/css/manifest.css" rel="stylesheet" />-->
     <link href="assets/css/main.css" rel="stylesheet" />
+    <link href="assets/css/atom-one-light.min.css" rel="stylesheet" />
 
     <link rel="canonical" href='https://hsa4.api.ans.dhsc.gov.uk//'>
     <link rel="icon" sizes="48x48" href="assets/images/favicon.ico">
@@ -104,11 +104,6 @@
                     </li>
                     <li class="toc-level-2">
                         <a href="#reporting-accessibility-problems-with-this-website"><span>Reporting accessibility problems with this website</span></a>
-        <ul class="table-of-contents">
-                    <li class="toc-level-3">
-                        <a href="#enforcement-procedure"><span>Enforcement procedure</span></a>
-                    </li>
-        </ul>
                     </li>
                     <li class="toc-level-2">
                         <a href="#technical-information-about-this-websites-accessibility"><span>Technical information about this website&#x2019;s accessibility</span></a>
@@ -212,7 +207,16 @@
         </div>
     
         <script src="/assets/js/govuk_frontend.js" type="module"></script>
+        <script src="/assets/js/highlight.min.js"></script>
         <script src="/assets/js/application.js"></script>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', (event) => {
+                document.querySelectorAll('pre code').forEach((el) => {
+                    hljs.highlightElement(el);
+                });
+            });
+        </script>
 
     </body>
 
