--- a/DHSC.ANS.API.Consumer.Docs/output/index.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/index.html
@@ -2,6 +2,8 @@
 <html lang="en" class="govuk-template no-js">
 
     <head>
+    <meta name="robots" content="noindex, nofollow">
+
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -13,7 +15,7 @@
 
     <link rel="canonical" href='https://hsa4.api.ans.dhsc.gov.uk//'>
     <link rel="icon" sizes="48x48" href="assets/images/favicon.ico">
-    <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" sizes="any" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="mask-icon" href="assets/images/govuk-icon-mask.svg" color="#0b0c0c">
     <link rel="apple-touch-icon" href="assets/images/govuk-icon-180.png">
 
@@ -322,12 +324,11 @@ Users cannot submit data that is not directly supported by the HSA4 schema. All 
 <p class='govuk-body-m'>We believe this limit should be sufficient for all users of the DHSC HSA4 Form Submission API. However, if you believe your application requires a higher rate limit, please <a href="#support">contact support</a>.</p>
 <h2 id="support">Support</h2>
 <p class='govuk-body-m'>The DHSC HSA4 Form Submission API is currently in an <strong>Alpha phase</strong> and may be subject to changes and improvements as we gather feedback.</p>
-<p class='govuk-body-m'>If you experience any issues or have questions regarding the DHSC HSA4 Form Submission API, please contact the Abortion Notification Service (ANS) support team:</p>
-<ul class='govuk-list govuk-list--bullet'>
-<li><strong>If you are part of a government department:</strong> Contact the ANS team via <strong>Email:</strong> <a href="mailto:HSA4@dhsc.gov.uk">HSA4@dhsc.gov.uk</a> or <strong>Telephone:</strong> 020 7972 5541.</li>
-<li><strong>Otherwise:</strong> Contact the ANS team via <strong>Email:</strong> <a href="mailto:HSA4@dhsc.gov.uk">HSA4@dhsc.gov.uk</a>.</li>
-</ul>
-<p class='govuk-body-m'>Our support team is available to assist you with any technical or procedural queries related to the API.</p>
+<p class='govuk-body-m'>If you experience any issues or have questions regarding the DHSC HSA4 Form Submission API, please contact the Abortion Notification Service (ANS) support team</p>
+<p class='govuk-body-m'>For England, you must send completed paper forms to The Chief Medical Officer, 39 Victoria Street, London, SW1H 0EU.</p>
+<p class='govuk-body-m'>For Wales, you must send completed paper forms to The Chief Medical Officer, National Assembly for Wales, Cathays Park, Cardiff, CF10 3NQ.</p>
+<p class='govuk-body-m'>If you require further information on completing HSA4 forms, telephone 020 7972 5541 or email <a href="mailto:abortion.statistics@dhsc.gov.uk">abortion.statistics@dhsc.gov.uk</a>.</p>
+<p class='govuk-body-m'>More information about the Department of Health and Docial Care can be found at <a href="https://www.gov.uk/government/organisations/department-of-health-and-social-care">https://www.gov.uk/government/organisations/department-of-health-and-social-care</a></p>
 <h3 id="additional-resources">Additional Resources</h3>
 <p class='govuk-body-m'>For further guidance on HSA4 form submissions and the associated legal framework, please refer to the following resources:</p>
 <ul class='govuk-list govuk-list--bullet'>
@@ -396,9 +397,9 @@ Users cannot submit data that is not directly supported by the HSA4 schema. All 
             </div>
         </div>
     
-        <script src="/assets/js/govuk_frontend.js" type="module"></script>
-        <script src="/assets/js/highlight.min.js"></script>
-        <script src="/assets/js/application.js"></script>
+        <script src="assets/js/govuk_frontend.js" type="module"></script>
+        <script src="assets/js/highlight.min.js"></script>
+        <script src="assets/js/application.js"></script>
 
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
