--- a/DHSC.ANS.API.Consumer.Docs/output/reference.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/reference.html
@@ -2,6 +2,8 @@
 <html lang="en" class="govuk-template no-js">
 
     <head>
+    <meta name="robots" content="noindex, nofollow">
+
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -13,7 +15,7 @@
 
     <link rel="canonical" href='https://hsa4.api.ans.dhsc.gov.uk//'>
     <link rel="icon" sizes="48x48" href="assets/images/favicon.ico">
-    <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
+    <link rel="icon" sizes="any" href="assets/images/favicon.svg" type="image/svg+xml">
     <link rel="mask-icon" href="assets/images/govuk-icon-mask.svg" color="#0b0c0c">
     <link rel="apple-touch-icon" href="assets/images/govuk-icon-180.png">
 
@@ -1710,9 +1712,9 @@ For further details, see: <a href="https://www.gov.uk/government/publications/ab
             </div>
         </div>
     
-        <script src="/assets/js/govuk_frontend.js" type="module"></script>
-        <script src="/assets/js/highlight.min.js"></script>
-        <script src="/assets/js/application.js"></script>
+        <script src="assets/js/govuk_frontend.js" type="module"></script>
+        <script src="assets/js/highlight.min.js"></script>
+        <script src="assets/js/application.js"></script>
 
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
