add widdershins template

--- a/DHSC.ANS.API.Consumer.Docs/output/api-docs.html
+++ b/DHSC.ANS.API.Consumer.Docs/output/api-docs.html
@@ -167,10 +167,6 @@
 <p class='govuk-body-m'>Scroll down for code samples, example requests and responses. Select a language for code samples from the tabs above or the mobile navigation menu.</p>
 </blockquote>
 <p class='govuk-body-m'>Registered medical practitioners must complete and send HSA4 forms to the Chief Medical Officer (CMO), in accordance with the Abortion Act 1967, <strong>within 14 days</strong> of the termination.</p>
-<h2 id="contact-details">Contact Details</h2>
-<p class='govuk-body-m'>For England, you must send completed paper forms to The Chief Medical Officer, 39 Victoria Street, London, SW1H 0EU.</p>
-<p class='govuk-body-m'>For Wales, you must send completed paper forms to The Chief Medical Officer, National Assembly for Wales, Cathays Park, Cardiff, CF10 3NQ.</p>
-<p class='govuk-body-m'>If you require further information on completing HSA4 forms, telephone <strong>020 7972 5541</strong> or email <a href="mailto:abortion.statistics@dhsc.gov.uk">abortion.statistics@dhsc.gov.uk</a>.</p>
 <p class='govuk-body-m'>Web: <a href="https://www.gov.uk">DHSC</a></p>
 <h1 id="dhsc-ans-api-consumer-hsa4form">HSA4Form</h1>
 <h2 id="submit-a-new-hsa4-abortion-notification-form">Submit a new HSA4 abortion notification form.</h2>
@@ -1020,7 +1016,7 @@ For further details, see: <a href="https://www.gov.uk/government/publications/ab
 <td class='govuk-table__cell'><a href="#schemapractitionerinfodto">PractitionerInfoDto</a></td>
 <td class='govuk-table__cell'>true</td>
 <td class='govuk-table__cell'>none</td>
-<td class='govuk-table__cell'>Practitioner Information - Section 1<br>Required information:<br>- Full name of the practitioner.<br>- Address of the practitioner.<br>- GMC number (7 digits).<br>- Date of signature.<br>For further details, see: <a href="https://www.gov.uk/government/publications/abortion-notification-forms-for-england-and-wales">Practitioner Information - Section 1</a><br><p class='govuk-body-m'><br><strong>Section 1: Practitioner Terminating the Pregnancy</strong><br></p><br><p class='govuk-body-m'><br>You must provide a full name, address, and General Medical Council (GMC) registration number, signature, and date.<br></p><br><p class='govuk-body-m'><br>The address stated does not have to be the one shown on the GMC’s annual registration certificate. <br>However, if the form is incomplete and the place of termination is missing, the form will be returned to the address held by the GMC.<br></p><br><p class='govuk-body-m'><br>You must also complete the declaration, as appropriate. In the case of medical terminations, the form must be signed <br>even if the practitioner has been unable to confirm that the pregnancy has been terminated (see <a href="https://www.gov.uk/government/publications/abortion-notification-forms-for-england-and-wales/guidance-notes-for-completing-hsa4-paper-forms#section-4-treatment-details" target="_blank">Section 4: treatment details</a> in the guidanace document).<br></p><br><p class='govuk-body-m'><br>Forms will be returned if the practitioner’s name, address, GMC number, or signature are missing, or if the GMC number <br>cannot be found on the GMC register.<br></p><br><p class='govuk-body-m'><br>For medical abortions, when more than one doctor may be involved in the termination, the <em>terminating practitioner</em> <br>is the doctor taking responsibility for the abortion. Usually, this will be the practitioner prescribing the mifepristone.<br></p></td>
+<td class='govuk-table__cell'>none</td>
 </tr>
 <tr>
 <td class='govuk-table__cell'>certification</td>
@@ -1345,37 +1341,6 @@ For further details, see: <a href="https://www.gov.uk/government/publications/ab
 }
 
 </code></pre>
-<p class='govuk-body-m'>Practitioner Information - Section 1
-Required information:</p>
-<ul class='govuk-list govuk-list--bullet'>
-<li>Full name of the practitioner.</li>
-<li>Address of the practitioner.</li>
-<li>GMC number (7 digits).</li>
-<li>Date of signature.
-For further details, see: <a href="https://www.gov.uk/government/publications/abortion-notification-forms-for-england-and-wales">Practitioner Information - Section 1</a></li>
-</ul>
-<p class='govuk-body-m'>
-<strong>Section 1: Practitioner Terminating the Pregnancy</strong>
-</p>
-<p class='govuk-body-m'>
-You must provide a full name, address, and General Medical Council (GMC) registration number, signature, and date.
-</p>
-<p class='govuk-body-m'>
-The address stated does not have to be the one shown on the GMC’s annual registration certificate. 
-However, if the form is incomplete and the place of termination is missing, the form will be returned to the address held by the GMC.
-</p>
-<p class='govuk-body-m'>
-You must also complete the declaration, as appropriate. In the case of medical terminations, the form must be signed 
-even if the practitioner has been unable to confirm that the pregnancy has been terminated (see <a href="https://www.gov.uk/government/publications/abortion-notification-forms-for-england-and-wales/guidance-notes-for-completing-hsa4-paper-forms#section-4-treatment-details" target="_blank">Section 4: treatment details</a> in the guidanace document).
-</p>
-<p class='govuk-body-m'>
-Forms will be returned if the practitioner’s name, address, GMC number, or signature are missing, or if the GMC number 
-cannot be found on the GMC register.
-</p>
-<p class='govuk-body-m'>
-For medical abortions, when more than one doctor may be involved in the termination, the <em>terminating practitioner</em> 
-is the doctor taking responsibility for the abortion. Usually, this will be the practitioner prescribing the mifepristone.
-</p>
 <h3 id="properties-12">Properties</h3>
 <table class="table">
 <thead class='govuk-table__head'>
